# bloom-v2

./: .bootstrap_state  .envrc  .eslintrc.cjs  .gitignore  .lintstagedrc  .omniforge_index  .prettierignore  .toolsrc  BOOTSTRAP_IMPLEMENTATION_COMPLETE.md  BOOTSTRAP_QUICK_REFERENCE.md  BOOTSTRAP_SYSTEM_FINAL.md  Dockerfile  Dockerfile.dev  INSTALL_DIR_REFACTORING_COMPLETE.md  LOGGING-SYSTEM-COMPLETE.md  PATCH-SUMMARY-CODEX-ANALYSIS.md  QUICK_START_BOOTSTRAP.md  README.md  VARIABLE-CLEANUP-SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  docker-upgrade.md  drizzle.config.ts  env.sh  fix_bootstrap_scripts.md  ignored-files.md  next.config.ts  omni  package.json  playwright.config.ts  run-bootstrap.sh  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: .claudeignore  .gitignore  CLAUDE.md  PLAYBOOK-documentation-update.md  PLAYBOOK-hybrid-codex.md  QUICK-REFERENCE.md  REFACTORING-PLAN.md  SETUP-SUMMARY.md
.claude/commands/: mode-hybrid.md  profile-code-reviewer.md  profile-code-writer.md  profile-debugger.md  profile-documenter.md  profile-researcher.md
.claude/commands/profiles/: code-reviewer.md  code-writer.md  debugger.md  documenter.md  researcher.md
.claude/docs/playbook/: session-summary-2025-11-24.md
.claude/scripts/playbook/: README.md
.github/workflows/: ci-path-validation.yml  docker.yml
.husky/: commit-msg  pre-commit
_AppModules-Luce/GitHub-Scripts/: IMPLEMENTATION-SUMMARY.md  README.md  gh.sh
_AppModules-Luce/GitHub-Scripts/lib/: core.sh
_AppModules-Luce/_bootstrap/root/: .env.example  .gitignore
_AppModules-Luce/apps/GitHub-Scripts/: QUICK-REFERENCE.md  REFACTORING-VALIDATION-REPORT.md  gh.conf  gh.original.sh  gh.sh
_AppModules-Luce/apps/TokenHeadroom/: README.md  context_policy.json  registry.sh  token_headroom.sh
_AppModules-Luce/apps/cli-manager/: PLAYBOOK_LIBRARY.md
_AppModules-Luce/apps/context-opt/: claudeignore_optimization.sh
_AppModules-Luce/docs/Melissa-Playbooks/: 10_seed_melissa_data.sh  1_schema_and_migrate.sh  2_config_services.sh  3_markdown_spec.sh  4_compile_pipeline.sh  5_settings_prompt.sh  6_session_context.sh  7_ifl_and_prompt_builder.sh  8_tests_prompt.sh  9_cleanup_prompt.sh  COMPREHENSIVE-MELISSA-IMPLEMENTATION-PLAN.md  Claude-Cleanup-Prototype-Playbooks.md  Claude-Settings-Playbook-UI.md  Claude-Tests-IFL-and-Compiler.md  DRY-RUN-VALIDATION-REPORT.md  FULL-IMPLEMENTATION-PLAN.md  IMPLEMENTATION-CHANGES-SUMMARY.md  IMPLEMENTATION-INDEX.md  INSTALLATION-GUIDE.md  MELISSA-PLAYBOOKS-IMPLEMENTATION.md  _Playbookreview.md  install.sh  install_phase2.sh
_AppModules-Luce/docs/PRD-Bloom/: Bloom-Architecture-v10.md  Bloom-PRD-v10-MVP-v1.0.md
_AppModules-Luce/docs/playbooks/: PLAYBOOK-DOCUMENTATION-CONSOLIDATION.md
_backup/manual-fixes/: confidence.ts  narrative.ts  sessionState.ts
_backup/omniforge-enhancements/: init-typescript.sh  test-cleanup.sh  test-deploy.sh  verify-build.sh
_build/: FRD-OmniForge-Profile-System.md  _PROMTPS  docker-complete-web.md  omni-landing-design-v3.html  web-docker-done.md
_build/bootstrap_claude/.claude/: CLAUDE.md  GUIDELINES.md
_build/bootstrap_scripts/: .claudeignore.example  .env.example  ORCHESTRATOR_SPEC.md  bootstrap.conf  orchestrate.sh  run-bootstrap-README.md  run-bootstrap.sh
_build/bootstrap_scripts/example/: .claudeignore.example  .gitignore.example  bootstrap.conf.example
_build/bootstrap_scripts/example-files/: .claudeignore.example  .dockerignore.example  .npmignore.example  .prettierrc.example  .python-version.example  .venv.example  drizzle.config.ts.example  pnpm-workspace.yaml.example  setup.cfg.example
_build/bootstrap_scripts/lib/: common.sh  config.sh  config_bootstrap.sh  phases.sh  utils.sh
_build/claude-docs/: BOOTSTRAP_MERGE_COMPLETE.md  BOOTSTRAP_SOURCE_COMPARISON.md
_build/direnv/: direnv-setup.sh
_build/docker/: DockerFirst-OmniForge-Plan-v2.md  PLAN.md
_build/docker-deploy/3/: files-created-20251127T054947Z.txt
_build/docs/: architecture-README.md
_build/docs/PRD/: Appmelia_Bloom_Anthropic_Instructions_v2.md  Appmelia_Bloom_Customer_Lens.md  Appmelia_Bloom_Customer_Workshop_Content.md  Appmelia_Bloom_Internal_Business_Case_v2.md  Bloom2 PRD v1.0.md  WWW - appmelia - from google.md
_build/omniforge/: .gitignore  OMNIFORGE.md  bootstrap-migration-plan.md  bootstrap.conf  omni.config  omni.phases.sh  omni.profiles.sh  omni.settings.sh  omni.sh  omniforge_refactor.sh
_build/omniforge/docs/: BOOTSTRAP-AUTHORITY-PATCH.md  DEPENDENCY-ARCHITECTURE.md  DEPENDENCY-QUICK-REFERENCE.md  DEPLOY-REPORT-2025-11-24.md  DEPLOYMENT-FIXES.md  DRY-RUN-REPORT-2025-11-24.md  FRD-tech_stack_standardization.md  LOGGING.md  (+32 more)
_build/omniforge/example-files/: .claudeignore.example  .editorconfig.example  .env.example  .eslintignore.example  .gitignore.example  .nvmrc.example  bootstrap.conf.example  omni.config.example  omni.settings.example  package.json.example  pyproject.toml
_build/prompts/: prompt-simple-menu.md
_build/scripts/: docker-deploy-clean.sh
docker/: app-entrypoint.sh
docs/kb/: KB-FALLBACK-QUICK-START.md  KB-STANDARDIZATION-REPORT.md  create-kb-v3.1.md  kb-fallback-implementation.md  llms.md  llms.txt  melissa-persona-ui-implementation.md  validate.sh
docs/omniforge-deployment/: omni-deployment-checklist.md
e2e/: example.spec.ts  home.spec.ts
pages/: 404.tsx
scripts/: ci-path-check.sh  docker-dev.sh  list-ignored-files.sh  start-dev.sh
scripts/bootstrap/: bootstrap.conf.example
src/: env.ts  middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: index.ts
src/db/: index.ts
src/hooks/: useFeatureFlag.tsx
src/jobs/: index.ts  types.ts
src/prompts/: discovery.ts  phaseRouter.ts  quantification.ts  synthesis.ts  system.ts  validation.ts
src/schemas/: confidence.ts  review.ts  roi.ts
src/stores/: index.ts
src/test/: README.md  setup.ts
(+882 files in other folders)
